# cow-indexer

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-release.yml
abis/: CoWSwapEthFlow.json  ComposableCoW.json  GPv2Settlement.json
config/: chains.yaml
deployments/: arbitrum_one.json  avalanche.json  base.json  bnb.json  gnosis.json  ink.json  linea.json  mainnet.json  plasma.json  polygon.json  sepolia.json
export-schema/: manifest.schema.json
export-schema/v1/: auctions.schema.json  order_events.schema.json  orders.schema.json  trades.schema.json
migrations/: 000_settings.sql  001_indexing_state.sql  002_raw_sources.sql  003_orders.sql  004_trades.sql  005_competitions.sql  006_metadata.sql  007_competition_normalization.sql  008_committed_views.sql
scripts/: export_orderbook.py
src/cow_indexer/: __init__.py  cli.py  config.py  models.py  observability.py  utils.py
src/cow_indexer/decoders/: __init__.py  events.py
src/cow_indexer/loaders/: __init__.py  events.py
src/cow_indexer/services/: __init__.py  backfill_orderbook.py  continuous.py  enrichment.py  export_import.py  historical.py  preflight.py  repair.py  validation.py
tests/integration/: test_clickhouse.py
tests/live/: test_api.py
tests/unit/: test_backfill_orderbook.py  test_config.py  test_cow_api.py  test_decoder.py  test_enrichment.py  test_exports.py  test_historical.py  test_migrations.py  test_preflight.py  test_purge.py  test_remediation.py  test_rpc.py  test_utils.py
(+11 files in other folders)
