[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cow-indexer"
version = "0.1.0"
description = "Standalone multi-chain CoW Protocol indexer"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "aiohttp>=3.10,<4",
  "clickhouse-connect>=0.8,<1",
  "curl-cffi>=0.13,<1",
  "eth-abi>=5.1,<6",
  "eth-hash[pycryptodome]>=0.7,<1",
  "eth-utils>=5,<6",
  "jsonschema>=4.23,<5",
  "prometheus-client>=0.21,<1",
  "pyarrow>=18,<23",
  "pydantic>=2.9,<3",
  "pyyaml>=6,<7",
  "structlog>=24,<26",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
postgres-export = ["psycopg[binary]>=3.2,<4"]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.9,<1",
]

[project.scripts]
cow-indexer = "cow_indexer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cow_indexer"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501"]
